Fixes https://bugs.webkit.org/show_bug.cgi?id=41323. Provides an implementation of the 'squiggle' used for bad grammar or spelling, based on the Pango logic used by the GTK builds.

Reviewed by Gustavo Noronha Silva.

No new tests. Covered by LayoutTests/editing/spelling

* WebCore.vcproj/WebCore.vcproj: Add new file holding underline
implementation, set to build only for WinCairo port.
* platform/graphics/cairo/DrawErrorUnderline.cpp: Added.
(drawErrorUnderline): New file containing the squiggle drawing
logic based on the Pango implementation.  Placed in its own file
to isolate licenses.
* platform/graphics/cairo/GraphicsContextCairo.cpp:
(WebCore::GraphicsContext::drawLineForMisspellingOrBadGrammar):
Have WinCairo build call new 'drawErrorUnderline' implementation.



Canonical link: https://commits.webkit.org/53306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62388 268f45cc-cd09-0410-ab3c-d52691b4dbfc